feat: zone type endpoint
